--- a/pom.xml
+++ b/pom.xml
@@ -24,14 +24,16 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.jayway.jsonpath</groupId>
-            <artifactId>json-path</artifactId>
-            <scope>test</scope>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
+
     </dependencies>
 
     <properties>
         <java.version>1.9</java.version>
+        <jackson.version>2.9.5</jackson.version>
     </properties>
 
 
